post crud using remote api

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,348 @@ a {
 * {
   box-sizing: border-box;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Open+Sans');
+
+.post-container{
+  display: flex;
+  justify-content: center;
+  padding: 80px;
+}
+
+.square:hover {
+    /* -webkit-transform: translate(20px, -10px);
+    -ms-transform: translate(10px, -10px);
+    transform: translate(10px, -10px);
+    -webkit-box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08); */
+     }
+
+
+.square{
+  width: 860px;
+	height: 430px;
+	/* background: white; */
+  background-image: url('https://images.unsplash.com/photo-1504610926078-a1611febcad3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e1c8fe0c9197d66232511525bfd1cc82&auto=format&fit=crop&w=1100&q=80');
+  border-radius: 4px;
+  box-shadow: 0px 20px 50px #D9DBDF;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease; 
+}
+
+.mask{
+  clip: rect(0px, 860px, 220px, 0px);
+  border-radius: 4px;
+  position: absolute;
+}
+
+img{
+  width: 860px;
+  overflow: hidden!important;
+  }
+
+.square .h1{
+  margin: auto;
+  text-align: left;
+  margin-top: 240px;
+  padding-left: 30px;
+  padding-bottom: 50px;
+  font-family: 'Merriweather', serif;
+  font-size: 24px;
+  color: #ff5e14;
+}
+.square p{
+ text-align: justify; 
+ padding-left: 30px;
+ padding-right: 30px;
+ font-family: 'Open Sans', sans-serif;
+ font-size: 12px;
+ color: #ff5e14;
+ line-height: 18px;
+ padding-top: 20px;
+}
+
+.button-more {
+    background-color: #3EDD84;
+    color: white;
+    /* float: right!important; */
+    width: 90px;
+    padding: 10px 18px;
+    border-radius: 3px;
+    text-align: center!important;
+    text-decoration: none;
+    display: block;
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 70px;
+    font-size: 12px;
+    cursor: pointer;
+    font-family: 'merriweather';
+}
+
+/* nav{
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background: #202020;
+  padding: 25px 0;
+  color: #ff5e14;
+} */
+/* nav a{
+  display: inline-block;
+  margin-left: 20px;
+} */
+
+.container {
+  margin: 0 auto;
+  max-width: 860px;
+}
+.navigation {
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background: #202020;
+  /* padding: 25px 0; */
+  color: #ff5e14;
+  
+}
+.logo {
+  color: #ff5e14;
+  width: 20%;
+  float: left;
+  line-height: 40px;
+}
+.navigation-links {
+  text-align: right;
+  padding: 0;
+}
+.navigation-links li {
+  color: #ff5e14;
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 20px;
+  -webkit-transition: all .8s; /* Safari prior 6.1 */
+  transition: all .8s;
+}
+
+.navigation-links li.active {
+  background-color: rgba(	83, 173, 203, .3);
+}
+
+.navigation-links li:hover {
+  background-color: rgba(	83, 173, 203, 1);
+  color: #fff;
+  cursor: pointer;
+}
+.icon {
+  display: none;
+  padding: 20px;
+  border-radius: 50%;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    margin: 0 auto;
+    max-width: 600px;
+  }
+  .logo {
+    width: 100%;
+    padding: 0 20px;
+  }
+  
+  .navigation-links li {display: none;}
+  .navigation-links a.icon {
+    float: right;
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 40px;
+  }
+  .navigation.responsive .navigation-links a.icon {
+    background-color: rgba(	83, 173, 203, 1);
+    color: #fff;
+    cursor: pointer;
+    
+  }
+  
+  .navigation.responsive {
+    position: relative;
+    height: 200px;
+  }
+  .navigation.responsive .navigation-links li {
+    float: none;
+    display: block;
+    text-align: left;
+      -webkit-transition: all .8s; /* Safari prior 6.1 */
+  transition: all .8s;
+  }
+}
+
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+.footer-section {
+background: #151414;
+position: relative;
+}
+.footer-cta {
+border-bottom: 1px solid #373636;
+}
+.single-cta i {
+color: #ff5e14;
+font-size: 30px;
+float: left;
+margin-top: 8px;
+}
+.cta-text {
+padding-left: 15px;
+display: inline-block;
+}
+.cta-text h4 {
+color: #fff;
+font-size: 20px;
+font-weight: 600;
+margin-bottom: 2px;
+}
+.cta-text span {
+color: #757575;
+font-size: 15px;
+}
+.footer-content {
+position: relative;
+z-index: 2;
+}
+.footer-pattern img {
+position: absolute;
+top: 0;
+left: 0;
+height: 330px;
+background-size: cover;
+background-position: 100% 100%;
+}
+.footer-logo {
+margin-bottom: 30px;
+}
+.footer-logo img {
+  max-width: 200px;
+}
+.footer-text p {
+margin-bottom: 14px;
+font-size: 14px;
+    color: #7e7e7e;
+line-height: 28px;
+}
+.footer-social-icon span {
+color: #fff;
+display: block;
+font-size: 20px;
+font-weight: 700;
+font-family: 'Poppins', sans-serif;
+margin-bottom: 20px;
+}
+.footer-social-icon a {
+color: #fff;
+font-size: 16px;
+margin-right: 15px;
+}
+.footer-social-icon i {
+height: 40px;
+width: 40px;
+text-align: center;
+line-height: 38px;
+border-radius: 50%;
+}
+.facebook-bg{
+background: #3B5998;
+}
+.twitter-bg{
+background: #55ACEE;
+}
+.google-bg{
+background: #DD4B39;
+}
+.footer-widget-heading h3 {
+color: #fff;
+font-size: 20px;
+font-weight: 600;
+margin-bottom: 40px;
+position: relative;
+}
+.footer-widget-heading h3::before {
+content: "";
+position: absolute;
+left: 0;
+bottom: -15px;
+height: 2px;
+width: 50px;
+background: #ff5e14;
+}
+.footer-widget ul li {
+display: inline-block;
+float: left;
+width: 50%;
+margin-bottom: 12px;
+}
+.footer-widget ul li a:hover{
+color: #ff5e14;
+}
+.footer-widget ul li a {
+color: #878787;
+text-transform: capitalize;
+}
+.subscribe-form {
+position: relative;
+overflow: hidden;
+}
+.subscribe-form input {
+width: 100%;
+padding: 14px 28px;
+background: #2E2E2E;
+border: 1px solid #2E2E2E;
+color: #fff;
+}
+.subscribe-form button {
+  position: absolute;
+  right: 0;
+  background: #ff5e14;
+  padding: 13px 20px;
+  border: 1px solid #ff5e14;
+  top: 0;
+}
+.subscribe-form button i {
+color: #fff;
+font-size: 22px;
+transform: rotate(-6deg);
+}
+.copyright-area{
+background: #202020;
+padding: 25px 0;
+}
+.copyright-text p {
+margin: 0;
+font-size: 14px;
+color: #878787;
+}
+.copyright-text p a{
+color: #ff5e14;
+}
+.footer-menu li {
+display: inline-block;
+margin-left: 20px;
+}
+.footer-menu li:hover a{
+color: #ff5e14;
+}
+.footer-menu li a {
+font-size: 14px;
+color: #878787;
+}
